fix: link z-index (#44)

--- a/apps/logo-quiz/src/styles.scss
+++ b/apps/logo-quiz/src/styles.scss
@@ -89,7 +89,7 @@ button {
     opacity: 0.75;
     margin-top: 15px;
     position: relative;
-    z-index: 3;
+    z-index: 1;
 
     &, a {
       color: white;
